[gd_scene load_steps=13 format=3 uid="uid://by600etqyr3av"]

[ext_resource type="Script" path="res://scripts/demon.gd" id="1_6cq5v"]
[ext_resource type="Texture2D" uid="uid://d2uvfm8pstq0m" path="res://assets/tileset.png" id="1_owrko"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_yw7jy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="3_ihjd8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_okxnu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_xh6xe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jk7gb"]
size = Vector2(12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk2c1"]
atlas = ExtResource("1_owrko")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v3qe4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk2c1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_takfe"]
radius = 51.0098

[sub_resource type="CircleShape2D" id="CircleShape2D_yg4j1"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_po6an"]
radius = 11.0

[node name="Demon" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 18
script = ExtResource("1_6cq5v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_jk7gb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_v3qe4")
animation = &"idle"
autoplay = "idle"

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_yw7jy")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_okxnu")
initial_state = NodePath("Walking")

[node name="Walking" type="Node" parent="StateChart/Root"]
script = ExtResource("3_ihjd8")

[node name="FoundPlayer" type="Node" parent="StateChart/Root/Walking"]
script = ExtResource("6_xh6xe")
to = NodePath("../../GoToPlayer")
event = &"found_player"

[node name="AttackCaravan" type="Node" parent="StateChart/Root/Walking"]
script = ExtResource("6_xh6xe")
to = NodePath("../../AttackCaravan")
event = &"attack_caravan"

[node name="GoToPlayer" type="Node" parent="StateChart/Root"]
script = ExtResource("3_ihjd8")

[node name="CloseToPlayer" type="Node" parent="StateChart/Root/GoToPlayer"]
script = ExtResource("6_xh6xe")
to = NodePath("../../Attack")
event = &"close_to_player"

[node name="Attack" type="Node" parent="StateChart/Root"]
script = ExtResource("3_ihjd8")

[node name="GoToPlayer" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("6_xh6xe")
to = NodePath("../../GoToPlayer")
event = &"go_to_player"

[node name="AttackCaravan" type="Node" parent="StateChart/Root"]
script = ExtResource("3_ihjd8")

[node name="FoundPlayer" type="Node" parent="StateChart/Root/AttackCaravan"]
script = ExtResource("6_xh6xe")
to = NodePath("../../GoToPlayer")
event = &"found_player"

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource("CircleShape2D_takfe")
debug_color = Color(0.647059, 0.517647, 0.12549, 0.137255)

[node name="AttackPivot" type="Node2D" parent="."]

[node name="Attack" type="Area2D" parent="AttackPivot"]
position = Vector2(20, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackPivot/Attack"]
shape = SubResource("CircleShape2D_yg4j1")
disabled = true
debug_color = Color(0.996078, 0, 0.156863, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_po6an")

[connection signal="state_physics_processing" from="StateChart/Root/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/GoToPlayer" to="." method="_on_go_to_player_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_entered" from="StateChart/Root/AttackCaravan" to="." method="_on_attack_caravan_state_entered"]
[connection signal="body_entered" from="Visibility" to="." method="_on_visibility_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
